Switching themes will persist GD widgets but now keep theme specific widget settings - FIXED
If new import has new featured image it does not set it properly as featured image - FIXED
Beaver Builder plugin has problems with draft posts when GD installed - FIXED
Second line menus items can show over first line sub menu items becase of z-index - FIXED

v1.6.2
GD Search widget bug with Display Widgets plugin - FIXED
Log the WP error in debug.log with csv row number when fail to import listing - ADDED
Single select extra info value not showing when output - FIXED
Function geodir_get_post_meta() returns false value when field has value 0(zero) - FIXED
Added filters for client and admin emails - ADDED
Option added to remove details page tabs and show as list - ADDED
Added filter hook to listing slider widget - ADDED
If CPT order is changed from default the homepage categories dont change - FIXED
Hide the empty categories on the map - CHANGED
Large number of categories slow down the add listing page - FIXED
Removed DONOTCACHEPAGE for frontpage as it is no longer dynamic for locations - CHANGED
geodir_setup_submit_search() can set multiple click events on search submit - FIXED
OpenStreetMap integration added for maps - ADDED
New Avada theme can break search filters depending on settings - FIXED
General functions PHP version warning - FIXED

v1.6.0
GD export should not export deleted listings - CHANGED
Edited by author message should not fire when using GD import - CHANGED
get_currentuserinfo() Depreciated and removed/changed - FIXED
Option added to show custom text when no listings found in gd_listings shortcode - CHANGED
Page number variables added for titles & metas description - CHANGED
Forgot Password link not working - FIXED
The category icon and default image uploader no longer working with WP 4.5 - FIXED
Now able to set source category id for WPML translated categories in GD Import/Export - CHANGED
GD Import/Export imports wrong latitudes values - FIXED